[project]
name = "meeting_scheduler"
version = "0.1.0"
description = "meeting-scheduler using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
meeting_scheduler = "meeting_scheduler.main:run"
run_crew = "meeting_scheduler.main:run"
train = "meeting_scheduler.main:train"
replay = "meeting_scheduler.main:replay"
test = "meeting_scheduler.main:test"
run_with_trigger = "meeting_scheduler.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
